--- a/battery-quality-test-lab.html
+++ b/battery-quality-test-lab.html
@@ -343,7 +343,7 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/battery-quality-test-lab-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
@@ -373,7 +373,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Temperature Test Chamber in India"><img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India"></a>
+        <img src="img/temperature-test-chamber.png" class="card-img-top product-img" alt="Temperature Test Chamber in India" title="Temperature Test Chamber in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Temperature Test Chamber</h5>
@@ -389,7 +389,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Humidity Tester in India"><img src="img/humidity-tester.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India"></a>
+        <img src="img/humidity-tester.png" class="card-img-top product-img" alt="Humidity Tester in India" title="Humidity Tester in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Humidity Tester</h5>
@@ -405,7 +405,7 @@
     <!-- Card 3 -->
          <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Vibration Tester in India"><img src="img/vibration-tester.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India"></a>
+        <img src="img/vibration-tester.png" class="card-img-top product-img" alt="Vibration Tester in India" title="Vibration Tester in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Vibration Tester</h5>
@@ -424,7 +424,7 @@
   <div class="row g-4">
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Explosion Proof Chambers in India"><img src="img/explosion-chamber.png" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India"></a>
+        <img src="img/explosion-chamber.png" class="card-img-top product-img" alt="Explosion Proof Chambers in India" title="Explosion Proof Chambers in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Explosion Proof Chambers</h5>
@@ -439,7 +439,7 @@
     <!-- Card 1 -->
         <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Cycling Test Chamber in India"><img src="img/cycling-test-chamber.png" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India"></a>
+        <img src="img/cycling-test-chamber.png" class="card-img-top product-img" alt="Cycling Test Chamber in India" title="Cycling Test Chamber in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cycling Test Chamber</h5>
