--- a/other-machines.html
+++ b/other-machines.html
@@ -385,7 +385,8 @@
         <a href="#" title="Automatic Pasting Machine in India"><img src="img/automatic-pasting-machine.png" class="card-img-top product-img" alt="Automatic Pasting Machine in India" title="Automatic Pasting Machine in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">Automatic Pasting Machine</h5>
+            <h5 class="card-title text-center">Automatic Paper Pasting Machine </h5>
+            <p class="card-text text-muted text-center">For Solar & 2 Wheeler Battery</p>
           </div>
           <div class="mt-3 d-flex justify-content-center">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -397,7 +398,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Conveyor Belt in India"><img src="img/coveyer-belt.png" class="card-img-top product-img" alt="Conveyor Belt in India" title="Conveyor Belt in India"></a>
+        <img src="img/coveyer-belt.png" class="card-img-top product-img" alt="Conveyor Belt in India" title="Conveyor Belt in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title text-center">Conveyor Belt <br>(4m and 10m)</h5>
@@ -411,10 +412,10 @@
 
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="BMS Tester in India"><img src="img/bms-tester.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India"></a>
+        <img src="img/bms-tester.png" class="card-img-top product-img" alt="BMS Tester in India" title="BMS Tester in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">BMS Tester</h5>
+            <h5 class="card-title text-center">BMS Tester <br>16s/24s/32s/54s/104s</h5>
           </div>
           <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
@@ -430,12 +431,25 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Sleeve Cutter and Wire Cutter in India"><img src="img/sleeve-cutter.png" class="card-img-top product-img" alt="Sleeve Cutter and Wire Cutter in India" title="Sleeve Cutter and Wire Cutter in India"></a>
+        <img src="img/sleeve-cutter.png" class="card-img-top product-img" alt="Heat Shrink Sleeve Cutter and Nickle Strip Cutter in India" title="Heat Shrink Sleeve Cutter and Nickle Strip Cutter in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title text-center">Sleeve Cutter and Wire Cutter</h5>
+            <h5 class="card-title text-center">Heat Shrink Sleeve Cutter and Nickle Strip Cutter</h5>
           </div>
           <div class="mt-3 d-flex justify-content-center">
+            <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 d-flex">
+      <div class="card product-card flex-fill d-flex flex-column">
+        <img src="img/wire-cutter.png" class="card-img-top product-img" alt="Wire Cutter in India" title="Wire Cutter in India">
+        <div class="card-body d-flex flex-column justify-content-between">
+          <div>
+            <h5 class="card-title text-center">Wire Cutter</h5>
+          </div>
+          <div class="mt-3 d-flex justify-content-between">
             <button class="btn btn-customus" data-toggle="modal" data-target="#exampleModal-two" title="Send Enquiry"><i class="fa fa-envelope me-2"></i>Get Quote</button>
           </div>
         </div>
