--- a/bess-container-assembly-lines.html
+++ b/bess-container-assembly-lines.html
@@ -391,12 +391,30 @@
         <ul>
           <li>Production Line Size：100m（L）x 16m（W）x 6m（H）</li>
           <li>Container Transfer Method: Heavy load AGV Auto Transportation</li>
-          <li>Pack Installation Method: Automatic Pack Insertion by Robot</li>
+          <li>Pack Installation Method: Automatic Pack Insertion by Gantry System</li>
           <li>Required Ground Load Bearing Capacity：5000kg/m²</li>
           <li>Required Manpower:14persons (dynamic test station and spray system are not included)</li>
         </ul>
     </div>
 </div>
+</div>
+<div class="container bess-inner">
+  <div class="bess-inner-image">
+    <img src="img/bess-container-inner-1.png" alt="AGV" title="AGV">
+    <h5 class="text-center">AGV</h5>
+  </div>
+  <div class="bess-inner-image">
+    <img src="img/bess-container-inner-2.png" alt="Gantry System" title="Gantry System">
+    <h5 class="text-center">Gantry System</h5>
+  </div>
+  <div class="bess-inner-image">
+    <img src="img/bess-container-inner-3.png" alt="Straddle" title="Straddle">
+    <h5 class="text-center">Straddle</h5>
+  </div>
+  <div class="bess-inner-image">
+    <img src="img/bess-container-inner-4.png" alt="forklift" title="forklift">
+    <h5 class="text-center">forklift</h5>
+  </div>
 </div>
 <div class="container py-5">
 <div class="product col-lg-12">
