--- a/contact-us.html
+++ b/contact-us.html
@@ -409,7 +409,7 @@
     <img src="img/address.png" alt="Europe" title="Europe">
     </div>
     <div class="info-content text-center">
-    <span class="title font-weight-bold">Europe</span>
+      <span class="title">Global Sales Office</span>
     <p class="text-center">Via Cesare De Titta, 10, 66050 San Salvo (CH) Italy</p>
    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2963.093755552989!2d14.71739597598858!3d42.04116985518871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1330c3111e62dea1%3A0xa1fcf8c8ed784ca6!2sVia%20Cesare%20de%20Titta%2C%2010%2C%2066050%20San%20Salvo%20CH%2C%20Italy!5e0!3m2!1sen!2sin!4v1679655350135!5m2!1sen!2sin" class="mt-3 d-block" width="100%" height="220" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
@@ -423,10 +423,10 @@
 
     </div>
 
-    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 oneaddress-side">
+    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 oneaddress-side">
 
     <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
     <div class="single-info height-0 text-center">
     <div class="info-icon">
     <img src="img/call.png" alt="Phone" title="Phone">
@@ -442,15 +442,27 @@
     </div>
 
 
-    <div class="col-md-6">
+    <div class="col-md-4">
     <div class="single-info height-0 text-center">
     <div class="info-icon">
     <img src="img/mail.png" alt="Mail" title="Mail">
     </div>
     <div class="info-content text-center">
-    <span class="title font-weight-bold">Mail</span>
-    <div class="text"><a href="mailto:info@indygreentech.com" class="text-dark"> info@indygreentech.com,</a> <br> 
+    <span class="title font-weight-bold">Mail (General)</span>
+    <div class="text"><a href="mailto:info@indygreentech.com" class="text-dark"> francesca@indygreentech.com</a> <br> 
     <a href="mailto:sales@indygreentech.com" title="sales@indygreentech.com" class="text-dark">sales@indygreentech.com</a> </div>
+   
+    </div>
+    </div>
+    </div>
+    <div class="col-md-4">
+    <div class="single-info height-0 text-center">
+    <div class="info-icon">
+    <img src="img/mail.png" alt="Mail" title="Mail">
+    </div>
+    <div class="info-content text-center">
+    <span class="title font-weight-bold">Mail (Global)</span> <br>
+    <div class="text"><a href="mailto:info@indygreentech.com" class="text-dark"> francesca@indygreentech.com</a><br><br></div>
    
     </div>
     </div>
