--- a/index.html
+++ b/index.html
@@ -1657,7 +1657,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <div class="col-md-12 icon-box system mt-3">
 <div class="bg-white p-3">
 <div class="icon"><img src="img/address.png" alt="Location" title="Location"></div>
-<h4 class="mt-2">Europe</h4>
+<h4 class="mt-2">Global Sales Office</h4>
 <div class="text mb-3"><p class="pr-3">Via Cesare De Titta, 10, 66050 San Salvo (CH) Italy </p></div>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2963.093755552989!2d14.71739597598858!3d42.04116985518871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1330c3111e62dea1%3A0xa1fcf8c8ed784ca6!2sVia%20Cesare%20de%20Titta%2C%2010%2C%2066050%20San%20Salvo%20CH%2C%20Italy!5e0!3m2!1sen!2sin!4v1679655350135!5m2!1sen!2sin" class="mt-3 d-block" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
