--- a/solar-epc-components.html
+++ b/solar-epc-components.html
@@ -175,7 +175,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 <li class="nav-item mr-0"><a href="lithium-battery-raw-material.html" title="Raw Materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw Materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="lithium-cells.html" title="Lithium Cells" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Cells</a></li>
-<li class="nav-item mr-0"><a href="bms-tester.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
+<li class="nav-item mr-0"><a href="bms.html" title="BMS" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> BMS</a></li>
 
 </ul>
 </li>
@@ -309,7 +309,7 @@ solar encapsulant, solar EVA encapsulant, POE solar encapsulant, EPE solar encap
 <a href="Lithium-battery-raw-material.html" title="Raw Materials">Raw Materials</a>
 <ul>
 <li><a href="lithium-cells.html" title="Lithium Cells">Lithium Cells</a></li>
-<li><a href="bms-tester.html" title="BMS">BMS</a></li>
+<li><a href="bms.html" title="BMS">BMS</a></li>
 
 </ul>
 </li>
