--- a/lithium-cells.html
+++ b/lithium-cells.html
@@ -2,38 +2,36 @@
 <html lang="en">
 <head>
   <head>
-<!-- Title -->
-<title>Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies</title>
+  <!-- Title -->
+  <title>Lithium Cells | High-Performance Li-ion Cell Solutions - Indygreen Technologies</title>
 
-<!-- Meta Description -->
-<meta name="description" content="Indygreen Technologies provides advanced Cylindrical battery pack testers for lithium batteries — enabling accurate testing of voltage, capacity, performance, and safety of assembled battery packs for electric vehicles, energy storage, and industrial applications." />
+  <!-- Meta Description -->
+  <meta name="description" content="Indygreen Technologies provides high-quality lithium-ion cells for EVs, ESS, and consumer applications. Explore cylindrical, prismatic, and pouch cells with superior performance and safety standards." />
 
-<!-- Meta Keywords -->
-<meta name="keywords" content="Cylindrical battery pack testers, lithium battery testing equipment, battery pack testing systems, voltage testing, capacity testing, performance testing, lithium battery quality control, EV battery testers, BESS battery testers, Indygreen Technologies" />
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="lithium cells, lithium-ion cells, Li-ion cell supplier, cylindrical lithium cells, prismatic lithium cells, pouch battery cells, EV battery cells, energy storage battery cells, lithium cell manufacturer, high-performance lithium batteries" />
 
-<!-- Canonical Tag -->
-<link rel="canonical" href="https://www.indygreentech.com/cylindrical-battery-pack-testers.html" />
+  <!-- Robots -->
+  <meta name="robots" content="index, follow" />
 
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
-<meta property="og:description" content="High-precision Cylindrical battery pack testers for lithium batteries — designed for accurate voltage, capacity, performance, and safety testing of assembled battery packs." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.indygreentech.com/cylindrical-battery-pack-testers.html" />
-<meta property="og:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" />
-<meta property="og:site_name" content="Indygreen Technologies" />
+  <!-- Author & Publisher -->
+  <meta name="author" content="Indygreen Technologies" />
+  <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-<!-- Twitter Card Meta Tags -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Cylindrical Battery Pack Testers for Lithium Batteries | Indygreen Technologies" />
-<meta name="twitter:description" content="Advanced Cylindrical battery pack testers for lithium batteries — ensuring accuracy, reliability, and safety in EVs, BESS, and industrial applications." />
-<meta name="twitter:image" content="https://www.indygreentech.com/images/cylindrical-battery-pack-tester.png" />
-<meta name="twitter:site" content="@IndygreenTech" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Lithium Cells | High-Performance Li-ion Cell Solutions" />
+  <meta property="og:description" content="Indygreen Technologies supplies advanced lithium-ion cells including cylindrical, prismatic, and pouch types for electric vehicles, ESS, and industrial applications." />
+  <meta property="og:url" content="https://www.indygreentech.com/lithium-cells.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Indygreen Technologies" />
 
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Lithium Cells | High-Performance Li-ion Cell Solutions" />
+  <meta name="twitter:description" content="Explore advanced lithium-ion cells from Indygreen Technologies — cylindrical, prismatic, and pouch formats for EVs and energy storage systems." />
 
-
-   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome for icons -->
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.indygreentech.com/lithium-cells.html" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -349,27 +347,24 @@
 </div>
 </section>
 <!--  -->
-<section class="ttm-page-title-row" style="background: url(img/cylindrical-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
+<section class="ttm-page-title-row" style="background: url(img/batteries-banner.png)no-repeat; background-size: cover; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-dark">Cylindrical Battery Pack Testers Modules</h1>
+<h1 class="title text-white">Lithium Cells</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
-<a title="Homepage" href="index.html" class="text-dark"><i class="ti ti-home"></i>Home</a>
+<a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
-<span class="ttm-bread-sep text-dark">/</span>
-<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
-<span class="ttm-bread-sep text-dark">/</span>
-<a title="Cylindrical Batteries Lines" href="cylindrical-batteries-lines.html" class="text-dark"><i class="ti ti-home"></i>Cylindrical Batteries Lines</a>
-</span>
-<span class="ttm-bread-sep text-dark">/</span>
-<a title="Cylindrical Batteries Lines" href="cylindrical-battery-pack-testers.html" class="text-dark"><i class="ti ti-home"></i>Cylindrical Battery Pack Testers</a>
-<span class="ttm-bread-sep text-dark">/</span>
-<span class="text-dark">Cylindrical Battery Pack Testers Modules</span>
+<span class="ttm-bread-sep text-white">/</span>
+<a title="Lithium Batteries Lines" href="lithium-batteries-lines.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-white">/</span>
+<a title="Lithium Batteries Lines" href="lithium-battery-raw-material.html" class="text-white"><i class="ti ti-home"></i>Lithium Batteries Lines</a>
+<span class="ttm-bread-sep text-white">/</span>
+<span class="text-white">Lithium Cells</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -378,25 +373,6 @@
 </section>
 <!-- About Us -->
  
-<div class="container py-5">
-<div class="product col-lg-12">
-    <div class="product-image col-lg-5">
-          <img src="img/cylindrical-battery-inner.png" alt="Cylindrical Battery Pack testers" title="Cylindrical Battery Pack testers" class="w-100 mb-3"><br>
-    </div>
-    <div class="product-description col-lg-7 sort">
-       <h2><strong>Cylindrical Battery Pack testers Modules</strong></h2> <br>
-        <table>
-  <tr><td>Voltage Testing Range</td><td>20V - 100V</td></tr>
-  <tr><td>Current Testing Range</td><td>10A - 100A </td></tr>
-  <tr><td>Supporting Battery Pack</td><td>For Cylindrical</td></tr>
-  <tr><td>Testing parameter</td><td>Capacity, Current, voltage, Cyclelife</td></tr>
-  <tr><td>MES Interface</td><td>With date save and transferring function</td></tr>
-  <tr><td>Power supply</td><td>Single phase, AC220V</td></tr>
-</table>
-    </div>
-</div>
-</div> 
-
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
