--- a/lithium-cells.html
+++ b/lithium-cells.html
@@ -372,7 +372,24 @@
 </div><!-- /.container -->                      
 </section>
 <!-- About Us -->
- 
+ <div class="container">
+  <div class="cylindrical-cells py-3">
+    <h2 class="header-text text-lght">Cylindrical Cells</h2> <br>
+    <h3 class="font-weight-600">Available Modles</h3>
+    <p>18650 / 21700 / 26650 / 32700 / 32140 / 33140</p>
+    <div class="cylindrical-logos">
+      <img src="" alt="">
+    </div>
+  </div>
+ </div>
+
+ <div class="container">
+  <div class="cylindrical-cells py-3">
+    <h2 class="header-text text-lght">Prismatic Cells</h2> <br>
+    <h3 class="font-weight-600">Available Modles</h3>
+    <p>100AH - 680AH</p>
+  </div>
+ </div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
