--- a/lithium-cells.html
+++ b/lithium-cells.html
@@ -377,8 +377,13 @@
     <h2 class="header-text text-lght">Cylindrical Cells</h2> <br>
     <h3 class="font-weight-600">Available Modles</h3>
     <p>18650 / 21700 / 26650 / 32700 / 32140 / 33140</p>
+    <h3 class="font-weight-600 text-center"><u>Our Suppliers</u></h3>
     <div class="cylindrical-logos">
-      <img src="" alt="">
+      <img src="img/lithium-cells/fb.png" alt="">
+      <img src="img/lithium-cells/bak.png" alt="">
+      <img src="img/lithium-cells/gotion.png" alt="">
+      <img src="img/lithium-cells/dmfgc.png" alt="">
+      <img src="img/lithium-cells/ten-power.png" alt="">
     </div>
   </div>
  </div>
