--- a/semi-auto-lines.html
+++ b/semi-auto-lines.html
@@ -388,6 +388,16 @@
         <p>With our semi-automatic setup, key processes are automated for precision, while manual operations are retained where flexibility and customization are required. This approach ensures consistent product quality, optimized labor utilization, and significant reduction in production costs.</p>
     </div>
 </div>
+<div class="container py-3">
+  <h3 class="text-center">Capacity</h3>
+  <div class="circle-container py-3">
+    <div class="circle">10 MW</div>
+    <div class="circle">20 MW</div>
+    <div class="circle">30 MW</div>
+    <div class="circle">50 MW</div>
+    <div class="circle">100 MW</div>
+  </div>
+</div>
 </div>
 <div class="container py-3">
     <section class="cell-tech">
