--- a/fully-auto-lines.html
+++ b/fully-auto-lines.html
@@ -381,7 +381,7 @@
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-image col-lg-4">
-        <img src="img/fully-auto.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
+        <img src="img/fully-automatic-new-inner.png" alt=" Fully Auto Lines in India" title=" Fully Auto Lines in India" class="w-100">
     </div>
     <div class="product-description col-lg-8">
         <h2><strong>Fully Auto Lines</strong></h2> <br>
@@ -390,7 +390,17 @@
     </div>
 </div>
 </div>
-
+<div class="container">
+  <h3 class="text-center"><u>Capacity</u></h3>
+  <div class="circle-container py-3">
+    <div class="circle">250 MW</div>
+    <div class="circle">500 MW</div>
+    <div class="circle">800 MW</div>
+    <div class="circle">1.6 GW</div>
+    <div class="circle">3.2 GW</div>
+    <div class="circle">6.4 GW</div>
+  </div>
+</div>
 <div class="container py-3">
     <section class="cell-tech">
     <h3>Complete Process Automation</h3>
@@ -405,19 +415,60 @@
       <li>Automatic Sorting, Packaging, and Data Traceability Modules</li>
     </ul>
     <p>Each system is linked via smart conveyors and MES integration, allowing centralized control and real-time monitoring.</p>
+    </section>
+    </div>
+   <div class="container">
+    <h3 class="text-center"><strong><u>Key Advantages</u></strong></h3> <br>
+    <div class="infographic">
 
-    <h3>Key Advantages</h3>
-    <ul>
-      <li><strong>High Production Capacity:</strong> Up to 100–300 MW per year depending on configuration</li>
-      <li><strong>Zero Manual Handling:</strong> Robotics and conveyors manage every step for consistent quality</li>
-      <li><strong>Precision & Repeatability:</strong> Maintains cell alignment and soldering accuracy with < 0.3 mm tolerance</li>
-      <li><strong>Reduced Labor Costs:</strong> Only minimal operators required for supervision and quality control</li>
-      <li><strong>Real-Time Monitoring:</strong> Smart sensors and MES connectivity enable predictive maintenance and data tracking</li>
-      <li><strong>Compatibility:</strong> Supports latest cell technologies including Mono PERC, TOPCon, HJT, Bifacial, and IBC modules</li>
-      <li><strong>Energy-Efficient Design:</strong> Optimized for low power consumption and high output ratio</li>
-    </ul>
+    <div class="info-card">
+      <div class="info-icon">⚙️</div>
+      <h3>High Production Capacity</h3>
+      <p>Up to 100–300 MW per year depending on configuration.</p>
+    </div>
 
-    <h3>Applications</h3>
+    <div class="info-card">
+      <div class="info-icon">🤖</div>
+      <h3>Zero Manual Handling</h3>
+      <p>Robotics and conveyors manage every step for consistent quality.</p>
+    </div>
+
+    <div class="info-card">
+      <div class="info-icon">🎯</div>
+      <h3>Precision & Repeatability</h3>
+      <p>Maintains cell alignment and soldering accuracy with &lt; 0.3 mm tolerance.</p>
+    </div>
+
+    <div class="info-card">
+      <div class="info-icon">👷</div>
+      <h3>Reduced Labor Costs</h3>
+      <p>Only minimal operators required for supervision and quality control.</p>
+    </div>
+
+    <div class="info-card">
+      <div class="info-icon">📊</div>
+      <h3>Real-Time Monitoring</h3>
+      <p>Smart sensors and MES connectivity enable predictive maintenance and data tracking.</p>
+    </div>
+
+    <div class="info-card">
+      <div class="info-icon">🔋</div>
+      <h3>Compatibility</h3>
+      <p>Supports Mono PERC, TOPCon, HJT, Bifacial, and IBC module technologies.</p>
+    </div>
+
+    <div class="info-card">
+      <div class="info-icon">🌱</div>
+      <h3>Energy-Efficient Design</h3>
+      <p>Optimized for low power consumption and high output ratio.</p>
+    </div>
+
+  </div>
+   </div>
+<!--  -->
+   <div class="container py-5">
+    <section class="cell-tech">
+      <h3>Applications</h3>
     <ul>
       <li>Utility-scale solar module manufacturing plants</li>
       <li>Export-oriented PV factories</li>
@@ -432,19 +483,43 @@
       <li>On-site training, maintenance, and after-sales support</li>
       <li>Integration with ERP/MES systems for production data management and traceability</li>
     </ul>
+    </section>
+   </div>
+   <div class="container py-3">
+     <h3 class="text-center"><strong><u>Benifits</u></strong></h3> <br>
+    <div class="infographic">
+    <div class="info-card">
+      <div class="info-icon">⚙️</div>
+      <h3>Fully Automated</h3>
+      <p>End-to-end automation from solar cell to finished module.</p>
+    </div>
 
-    <h3>Benefits at a Glance</h3>
-    <ul>
-      <li>Fully automated from cell to finished module</li>
-      <li>Designed for 24/7 continuous operation</li>
-      <li>Ensures zero human error and maximum throughput</li>
-      <li>Shorter cycle time per module, increasing daily output</li>
-      <li>Global supplier network for spare parts and technical support</li>
-    </ul>
+    <div class="info-card">
+      <div class="info-icon">⏱️</div>
+      <h3>24/7 Continuous Operation</h3>
+      <p>Designed for nonstop performance with minimal downtime.</p>
+    </div>
 
-  </section>
+    <div class="info-card">
+      <div class="info-icon">✅</div>
+      <h3>Zero Human Error</h3>
+      <p>Automation ensures precision, consistency, and maximum throughput.</p>
+    </div>
 
-</div>
+    <div class="info-card">
+      <div class="info-icon">🚀</div>
+      <h3>High Output Speed</h3>
+      <p>Shorter cycle time per module increases daily production efficiency.</p>
+    </div>
+
+    <div class="info-card">
+      <div class="info-icon">🌍</div>
+      <h3>Global Support Network</h3>
+      <p>Worldwide access to spare parts and technical service for reliability.</p>
+    </div>
+
+  </div>
+   </div>
   <!-- Footer -->
 <footer class="py-4">
 <div class="container">
