--- a/solar-panel-production-lines.html
+++ b/solar-panel-production-lines.html
@@ -392,7 +392,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/fully-auto-line-outer.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
+        <a href="fully-auto-lines.html" title="Fully Auto Line in India"><img src="img/fully-automatic-new.png" class="card-img-top product-img" alt="Fully Auto Line in India" title="Fully Auto Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Fully Auto Lines</h5>
