--- a/semi-auto-prismatic-lines.html
+++ b/semi-auto-prismatic-lines.html
@@ -387,6 +387,15 @@
     </div>
 </div>
 </div>
+<div class="app">
+      <h2>Applications</h2>
+    <p>Our Prismatic battery packs are designed for a wide range of <strong>industrial and consumer applications</strong>, including:</p>
+    <div class="app-sec col-lg-12 justify-content-center">
+    <div class="app-image col-lg-10">
+      <img src="img/prismatic-application.png" alt="Applications of Semi Auto Lines" title="Applications of Semi Auto Lines">
+    </div>
+    </div>
+</div>
 <div class="container py-5">
 <div class="product col-lg-12">
     <div class="product-description col-lg-6 pr-4">
