--- a/semi-auto-lines.html
+++ b/semi-auto-lines.html
@@ -421,14 +421,14 @@
       <li><strong>Supports Advanced PV Technologies:</strong> Compatible with Mono PERC, TOPCon, HJT, and Bifacial solar cells</li>
     </ul>
 
-    <h3>Why Choose a Semi-Automatic Solar Line?</h3>
+    <!--<h3>Why Choose a Semi-Automatic Solar Line?</h3>
     <p>Semi-automatic lines offer the best entry point into solar manufacturing, especially for startups or mid-size companies looking to balance automation investment and production flexibility. They allow:</p>
     <ul>
       <li>Lower initial capital investment compared to fully automatic lines</li>
       <li>Higher control over manual quality checks and adjustments</li>
       <li>Simplified training and operation for plant technicians</li>
       <li>Faster setup and easier maintenance</li>
-    </ul>
+    </ul>-->
 
     <h3>Applications</h3>
     <ul>
