--- a/pv-reliability-turnkey-lab.html
+++ b/pv-reliability-turnkey-lab.html
@@ -520,11 +520,8 @@
 <div class="container">
   <div class="product-description">
     <table>
-  <tr><td>Meet Standards:</td><td>IEC61215-2 MQT11 <br>IEC61215-2 MQT12 <br>IEC61215-2 MQT13 <br>IEC61215-2 MQT21 <br>IEC61730-2 MST51 <br>IEC61730-2 MST52 <br>IEC61730-2 MST53 <br>IEC61730-2 MST55 <br>IEC61730-2 MST56</td></tr>
-  <tr><td>Test purpose:</td><td>Determine the ability of the component to withstand the thermal spot thermal effect, and evaluate the welding melting or encapsulation degradation that may be caused by this effect. Battery failures, battery mismatches, shading or soiling can all cause such defects. <br>Determine the ability of the component to withstand the effects of
-high temperature and high humidity, as well as subsequent sub -
-zero temperatures. <br>Determine the ability of the component to withstand the effects of
-long - term moisture penetration.</td></tr>
+  <tr><td>Meet Standards:</td><td>IEC61215-2 MQT11 , IEC61215-2 MQT12 , IEC61215-2 MQT13 , IEC61215-2 MQT21 , IEC61730-2 MST51 , IEC61730-2 MST52 , IEC61730-2 MST53 , IEC61730-2 MST55 , IEC61730-2 MST56</td></tr>
+  <tr><td>Test purpose:</td><td>Determine the ability of the component to withstand the thermal spot thermal effect, and evaluate the welding melting or encapsulation degradation that may be caused by this effect. Battery failures, battery mismatches, shading or soiling can all cause such defects. <br>Determine the ability of the component to withstand the effects of high temperature and high humidity, as well as subsequent sub - zero temperatures. <br>Determine the ability of the component to withstand the effects of long - term moisture penetration.</td></tr>
 </table> <br>
 <table border="1" cellspacing="0" cellpadding="8" style="width:100%; border-collapse:collapse; text-align:left; font-family:Arial, sans-serif;">
   <thead style="background-color:#f2f2f2;">
