--- a/contact-us.html
+++ b/contact-us.html
@@ -376,7 +376,7 @@
 
     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
     <div class="single-info text-center">
-    <div class="info-icon">
+    <div class="info-icon1">
     <img src="img/address.png" alt="Corporate Office" title="Corporate Office">
     </div>
     <div class="info-content text-center">
@@ -391,7 +391,7 @@
 
     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
     <div class="single-info text-center">
-    <div class="info-icon">
+    <div class="info-icon1">
     <img src="img/address.png" alt="Works" title="Works">
     </div>
     <div class="info-content text-center">
@@ -405,7 +405,7 @@
 
     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-4">
     <div class="single-info text-center">
-    <div class="info-icon">
+    <div class="info-icon1">
     <img src="img/address.png" alt="Europe" title="Europe">
     </div>
     <div class="info-content text-center">
@@ -428,7 +428,7 @@
     <div class="row">
     <div class="col-md-4">
     <div class="single-info height-0 text-center">
-    <div class="info-icon">
+    <div class="info-icon1">
     <img src="img/call.png" alt="Phone" title="Phone">
     </div>
     <div class="info-content text-center">
@@ -444,7 +444,7 @@
 
     <div class="col-md-4">
     <div class="single-info height-0 text-center">
-    <div class="info-icon">
+    <div class="info-icon1">
     <img src="img/mail.png" alt="Mail" title="Mail">
     </div>
     <div class="info-content text-center">
@@ -457,7 +457,7 @@
     </div>
     <div class="col-md-4">
     <div class="single-info height-0 text-center">
-    <div class="info-icon">
+    <div class="info-icon1">
     <img src="img/mail.png" alt="Mail" title="Mail">
     </div>
     <div class="info-content text-center">
